[tool.poetry]
name = "cd-album-list"
version = "0.1.0"
description = ""
authors = ["syouki sugiyama <s1F102202594@iniad.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python =  ">=3.10,<4.0"
django = "^5.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
